<resources>
    <string name="app_name">EasyTour</string>

    <string name="authen">กำหนดสิทธิ์ผู้ใช้</string>
    <string name="listtour">โปรแกรมทัวร์</string>
    <string name="warning">การแจ้งเตือน</string>
    <string name="tracking">การติดตาม</string>
    <string name="recommend">แนะนำสถานที่ท่องเที่ยว</string>
    <string name="listuser">รายชื่อทัวร์</string>

    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="name">ชื่อผู้ใช้</string>
    <string name="tour">ลูกทัวร์</string>
    <string name="admin">มัคคุเทศน์</string>
    <string name="title_activity_my_tag">Map</string>

</resources>
